--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -15,7 +15,7 @@ html
 							.form-group
 								label(for='text') <mark>Enter The Name Of The User You Are Looking For</mark>
 								input#text.form-control(type='text', name='username' placeholder='Who are you looking for?')
-							.form-group
+							.form-group.text-center
 								input.btn.btn-primary(type='submit', value='Search!')
 							
 		
